[package]
name = "route53-update"
version = "0.0.1"
edition = "2021"

[dependencies]
aws-config = "1.1.2"
aws-sdk-route53 = "1.11.0"
clap = { version = "4.4.16", default-features = false, features = ["std", "derive", "usage", "help"] }
env_logger = "0.10.1"
openssl = { version = "0.10.62", features = ["vendored"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
time = "0.3.31"
tokio = { version = "1.35.1", features = ["macros"] }

[profile.release]
strip = true

[profile.release-build]
inherits = "release"
opt-level = "z"
strip = true
debug = false
lto = true
codegen-units = 1

[profile.debug-build]
inherits = "release"
opt-level = "z"
strip = false
debug = true
lto = true
codegen-units = 1
