[package]
name = "route53-update"
version = "0.0.2"
edition = "2021"

[dependencies]
aws-config = "1.1.8"
aws-sdk-route53 = "1.18.0"
clap = { version = "4.5.3", default-features = false, features = ["std", "derive", "usage", "help"] }
env_logger = "0.11.3"
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
time = "0.3.34"
tokio = { version = "1.36.0", features = ["macros"] }

[profile.release]
strip = true

[profile.release-build]
inherits = "release"
opt-level = "z"
strip = true
debug = false
lto = true
codegen-units = 1

[profile.debug-build]
inherits = "release"
opt-level = "z"
strip = false
debug = true
lto = true
codegen-units = 1
